tour/LabeledExpr.g4
grammar LabeledExpr;

import CommonLexerRules;

prog: stat+;

stat: expr NEWLINE 		# printExpr
	| ID '=' expr NEWLINE	# assign
	| NEWLINE				# black
	;

expr: expr op=('*'|'/') expr # MulDiv
	| expr op=('+'|'-') expr   # AddSub
	| INT					# int
	| ID					# id
	| '(' expr ')'			#parens
	;

MUL : '*';

DIV : '/';

ADD : '+';

SUB : '-';
